--- a/bk/.gitignore
+++ b/bk/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.class
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+!/target/
+!/.idea/
